<resources>
    <string name="app_name">HikingTrails</string>
    <string name="button_addHike">Add Hike</string>
    <string name="button_deleteHike">Delete</string>
    <string name="hint_hikeName">Hike Name</string>
    <string name="hint_hikeDescription">Description </string>
    <string name="menu_addHike">Add</string>
    <string name="menu_mapMode">Map Mode</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_cancelHike">Cancel</string>
    <string name="enter_hike_name"> Please enter a Hike Name </string>
    <string name="save_hike"> Save Hike </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_hike_image">Select hike image</string>
    <string name="change_hike_image">Change hike image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">MapActivity</string>

    <string name="hikeSubtitle">Please set hike difficulty</string>
    <string name="hard">Hard</string>
    <string name="intermediate">Intermediate</string>
    <string name="distance">Distance</string>
    <string name="difficulty">Difficulty</string>
    <string name="total">Total so Far</string>
    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>
    <string name="enter_amount">Enter Amount</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_hike_maps">Map of all Hikes</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login"> Signup/Login to HikingTrails</string>



</resources>